<resources>
    <string name="app_name" translatable="false">Status Downloader</string>

    <!--sliding navigation-->
    <string name="srn_drawer_open" translatable="false">Open</string>
    <string name="srn_drawer_close" translatable="false">Close</string>

    <string name="srn_ex_no_menu_view" translatable="false">No view for menu provided. You must either call .withMenuView(View) or pass a valid resource id to .withMenuLayout(int)</string>
    <string name="srn_ex_bad_content_view" translatable="false">Your content view must contain exactly one child. Make sure you call inject() after setContentView().</string>


    <string name="recent_status">Recent Status</string>
    <string name="saved_status">Saved Status</string>
    <string name="wapp">WhatsApp</string>
    <string name="wbapp">WA Business</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="more_app">More App</string>
    <string name="tap_to_open">Tap to open</string>
    <string name="whatsapp_business">Whatsapp Business</string>
    <string name="select_all">Select All</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
    <string name="photos">Photos</string>
    <string name="videos">Videos</string>
    <string name="share">Share</string>
    <string name="repost">Repost</string>
    <string name="exit_alert">Press back again to Exit</string>
    <string name="english" translatable="false">English</string>
    <string name="hindi" translatable="false">हिंदी</string>
    <string name="arabic" translatable="false">العربية</string>
    <string name="delete_error">Couldn\'t delete some files</string>
    <string name="delete_success">Deleted successfully</string>
    <string name="save_error">Couldn\'t save some files</string>
    <string name="save_success">All Status Are Saved Successfully</string>
    <string name="delete_alert">Are you sure , You want to delete selected files?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm">Confirm Delete....</string>
    <string name="del_status">Are you sure, You Want To Delete This Status?</string>
    <string name="saved_success">Status saved successfully</string>

    <!--steps-->
    <string name="how_to_use">How to use?</string>
    <string name="step_1">Step 1</string>
    <string name="first_step">Tap on WhatsApp icon.</string>
    <string name="step_2">Step 2</string>
    <string name="second_step">Click to open Whatsapp or WA Business button.</string>
    <string name="step_3">Step 3</string>
    <string name="step_three">First you have to see Status from Whatsapp or WA Business.</string>
    <string name="step_4">Step 4</string>
    <string name="step_four">Once you seen status in Whatsapp or WA Business then open this application Your seen status will be here in this app and from here you can Download and Share.</string>
    <string name="status_not_available">Status not available.</string>


    <!--admob ids-->
    <string name="admob_app_id" translatable="false">ca-app-pub-7141210209529810~6462649888</string>
    <string name="admob_banner_id" translatable="false">ca-app-pub-7141210209529810/6641493729</string>
    <string name="admob_interstitial" translatable="false">ca-app-pub-7141210209529810/9211461529</string>
    <string name="admob_openads" translatable="false">ca-app-pub-7141210209529810/5080644823</string>
</resources>