<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_bg_color"
    tools:context=".HelpActivity">

    <RelativeLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp">

        <ImageView
            android:id="@+id/backIV"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/_15sdp"
            android:src="@drawable/back"
            app:tint="@color/header_text_color" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/how_to_use"
            android:textColor="@color/header_text_color"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/banner_container"
        android:layout_below="@id/header">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="5dp"
                android:translationZ="3dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/step_1"
                            android:textColor="@color/help_text"
                            android:textSize="@dimen/_16sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_5sdp"
                            android:gravity="center"
                            android:text="@string/first_step"
                            android:textColor="@color/help_text"
                            android:textSize="@dimen/_14sdp" />
                    </LinearLayout>
                    <ImageView
                        android:id="@+id/help1"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_180sdp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        tools:src="@drawable/step1" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:layout_margin="10dp"
                android:elevation="5dp"
                android:translationZ="2dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Step 2"
                            android:textColor="@color/help_text"
                            android:textSize="@dimen/_16sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_5sdp"
                            android:gravity="center"
                            android:text="Click on WhatsApp icon"
                            android:textColor="@color/help_text"
                            android:textSize="@dimen/_14sdp" />
                    </LinearLayout>
                    <ImageView

                        android:id="@+id/help2"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_180sdp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        tools:src="@drawable/step2" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="5dp"
                android:translationZ="2dp">>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/step_3"
                            android:textColor="@color/help_text"
                            android:textSize="@dimen/_16sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_5sdp"
                            android:gravity="center"
                            android:text="Select WhatsApp or WABusinss"
                            android:textColor="@color/help_text"
                            android:textSize="@dimen/_14sdp" />
                    </LinearLayout>
                    <ImageView
                        android:id="@+id/help3"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_180sdp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        tools:src="@drawable/step3" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="5dp"
                android:translationZ="2dp">>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/step_4"
                            android:textColor="@color/help_text"
                            android:textSize="@dimen/_16sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_5sdp"
                            android:gravity="center"
                            android:text="See status which you want to download"
                            android:textColor="@color/help_text"
                            android:textSize="@dimen/_14sdp" />
                    </LinearLayout>
                    <ImageView
                        android:id="@+id/help4"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_180sdp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        tools:src="@drawable/step4" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="5dp"
                android:translationZ="2dp">>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Step 5"
                            android:textColor="@color/help_text"
                            android:textSize="@dimen/_16sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_5sdp"
                            android:gravity="center"
                            android:text="Select status checkbox"
                            android:textColor="@color/help_text"
                            android:textSize="@dimen/_14sdp" />
                    </LinearLayout>
                    <ImageView
                        android:id="@+id/help5"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_180sdp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        tools:src="@drawable/step5"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:elevation="5dp"
                android:translationZ="2dp">>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="Step 6"
                            android:textColor="@color/help_text"
                            android:textSize="@dimen/_16sdp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="@dimen/_5sdp"
                            android:gravity="center"
                            android:text="Save video to gallery"
                            android:textColor="@color/help_text"
                            android:textSize="@dimen/_14sdp" />
                    </LinearLayout>
                    <ImageView
                        android:id="@+id/help6"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_180sdp"
                        android:layout_marginBottom="@dimen/_20sdp"
                        tools:src="@drawable/step6" />
                </LinearLayout>
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </ScrollView>

    <include layout="@layout/banner_ad_lay" />
</RelativeLayout>